# DeletedGame

./: CMakeLists.txt  Doxyfile  README.md
doxygen/: annotated.html
doxygen/html/: BulletCase_8h_source.html  Bullet_8h_source.html  Carrier_8h_source.html  CleverEnemy_8h_source.html  DeletedGame_8h_source.html  FieldObject_8h_source.html  ForagerEnemy_8h_source.html  Hero_8h_source.html  Inventory_8h_source.html  ItemCollector_8h_source.html  Item_8h_source.html  Layer_8h_source.html  Level_8h_source.html  MapObject_8h_source.html  MedChest_8h_source.html  MyContainer_8h_source.html  Shooter_8h_source.html  Unit_8h_source.html  Weapon_8h_source.html  WildEnemy_8h_source.html  annotated.html  classBullet-members.html  classBullet.html  classBulletCase-members.html  classBulletCase.html  classBulletCase__coll__graph.map  classBulletCase__coll__graph.md5  classBulletCase__inherit__graph.map  classBulletCase__inherit__graph.md5  classBullet__coll__graph.map  classBullet__coll__graph.md5  classCarrier-members.html  classCarrier.html  classCarrier__coll__graph.map  classCarrier__coll__graph.md5  classCarrier__inherit__graph.map  classCarrier__inherit__graph.md5  classCleverEnemy-members.html  classCleverEnemy.html  classCleverEnemy__coll__graph.map  (+107 more)
doxygen/html/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_10.html  all_10.js  all_11.html  all_11.js  all_12.html  all_12.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_8.js  all_9.html  all_9.js  all_a.html  all_a.js  all_b.html  all_b.js  all_c.html  all_c.js  all_d.html  all_d.js  all_e.html  all_e.js  all_f.html  all_f.js  classes_0.html  classes_0.js  (+73 more)
doxygen/latex/: annotated.tex  classBullet.tex  classBulletCase.tex  classBulletCase__coll__graph.md5  classBulletCase__inherit__graph.md5  classBullet__coll__graph.md5  classCarrier.tex  classCarrier__coll__graph.md5  classCarrier__inherit__graph.md5  classCleverEnemy.tex  classCleverEnemy__coll__graph.md5  classCleverEnemy__inherit__graph.md5  classDeletedGame.tex  classFieldObject.tex  classFieldObject__coll__graph.md5  classFieldObject__inherit__graph.md5  classForagerEnemy.tex  classForagerEnemy__coll__graph.md5  classForagerEnemy__inherit__graph.md5  classHero.tex  classHero__coll__graph.md5  classHero__inherit__graph.md5  classInventory.tex  classItem.tex  classItemCollector.tex  classItemCollector__coll__graph.md5  classItemCollector__inherit__graph.md5  classItem__coll__graph.md5  classItem__inherit__graph.md5  classLayer.tex  classLevel.tex  classMapObject.tex  classMedChest.tex  classMedChest__coll__graph.md5  classMedChest__inherit__graph.md5  classMyContainer.tex  classShooter.tex  classShooter__coll__graph.md5  classShooter__inherit__graph.md5  classUnit.tex  (+11 more)
gtest/: CMakeLists.txt  gtest.cpp
include/: Bullet.h  BulletCase.h  Carrier.h  CleverEnemy.h  DeletedGame.h  FieldObject.h  ForagerEnemy.h  Hero.h  Inventory.h  Item.h  ItemCollector.h  Layer.h  Level.h  MapObject.h  MedChest.h  MyContainer.h  Shooter.h  Unit.h  Weapon.h  WildEnemy.h  main.h  myView.h
res/: DELETEDGame.mdj  map.tmx  map1.tmx  objects.xml  texture.xml  tileset1.xml  tileset_items.xml
res/img/items/weapons/: auto.xml  pistol.xml  riffle.xml
src/: Bullet.cpp  BulletCase.cpp  Carrier.cpp  CleverEnemy.cpp  DeletedGame.cpp  FieldObject.cpp  ForagerEnemy.cpp  Hero.cpp  Inventory.cpp  Item.cpp  ItemCollector.cpp  Layer.cpp  Level.cpp  MapObject.cpp  MedChest.cpp  Shooter.cpp  Unit.cpp  Weapon.cpp  WildEnemy.cpp  main.cpp  myView.cpp
